force-app/main/default/objects/Docusign_Result__e/Docusign_Result__e.object-meta.xml
<CustomObject>
    <label>Docusign Result</label>
    <pluralLabel>Docusign Result</pluralLabel>
</CustomObject>