force-app/main/default/objects/Docusign_Result__e/fields/Booking_Id__c.field-meta.xml
<CustomField>
    <fullName>Booking_Id__c</fullName>
    <label>Booking Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>