force-app/main/default/objects/Docusign_Result__e/fields/MessageToDisplay__c.field-meta.xml
<CustomField>
    <fullName>MessageToDisplay__c</fullName>
    <label>MessageToDisplay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>