force-app/main/default/objects/Docusign_Result__e/fields/Transaction_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Request_Id__c</fullName>
    <label>Transaction Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>